# weewx-clearskies-api

./: pyproject.toml
etc/: api.conf.example
tests/: test_aggregation_defaults.py  test_archive_params.py  test_db_engine.py  test_db_health_probe.py  test_db_integration.py  test_db_probe.py  test_db_reflection.py  test_db_session.py  test_providers_alerts_integration.py  test_providers_alerts_unit.py  test_providers_aqi_aeris_integration.py  test_providers_aqi_endpoint.py  test_providers_aqi_iqair_unit.py  test_providers_forecast_aeris_unit.py  test_providers_forecast_openweathermap_integration.py  test_providers_forecast_openweathermap_unit.py
tests/fixtures/providers/aqi/: openweathermap_current.md
tests/fixtures/providers/nws/: alerts_active.json  alerts_active.md  alerts_active_empty.json  alerts_active_extreme.json  alerts_active_malformed.json  alerts_active_unknown_severity.json
tests/fixtures/providers/wunderground/: error_401_invalid_key.json  error_429_quota.json  fixtures.md  forecast_daily_5day.json  forecast_daily_5day_passed_today.json
tests/providers/aqi/: test_aeris.py  test_iqair.py  test_openmeteo.py  test_openweathermap.py  test_units.py
tests/providers/radar/: test_openweathermap_unit.py
weewx_clearskies_api/: __main__.py
weewx_clearskies_api/config/: settings.py
weewx_clearskies_api/db/: __init__.py  engine.py  health.py  probe.py  reflection.py  session.py
weewx_clearskies_api/endpoints/: almanac.py  aqi.py  climatology.py  earthquakes.py  forecast.py  observations.py  radar.py  setup.py
weewx_clearskies_api/models/: params.py  responses.py
weewx_clearskies_api/providers/_common/: dispatch.py  http.py
weewx_clearskies_api/providers/alerts/: openweathermap.py
weewx_clearskies_api/providers/aqi/: _units.py  aeris.py  iqair.py  openmeteo.py  openweathermap.py
weewx_clearskies_api/providers/earthquakes/: emsc.py  geonet.py  renass.py  usgs.py
weewx_clearskies_api/providers/forecast/: aeris.py  nws.py  openmeteo.py  openweathermap.py  wunderground.py
weewx_clearskies_api/providers/radar/: aeris.py  openweathermap.py
weewx_clearskies_api/services/: almanac.py  archive.py  cache_warmer.py  local_conditions.py  station.py  units.py
