[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "weewx-clearskies-api"
version = "0.1.0"
description = "HTTP/JSON API for the Clear Skies weather dashboard"
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Clear Skies contributors" }]

dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.34.2",
    "pydantic==2.11.4",
    "pydantic-settings==2.9.1",
    "configobj==5.0.9",
    "cachetools==5.5.2",
    # ADR-012: SQLAlchemy 2.x engine; pymysql for MariaDB/MySQL (pure-Python,
    # no native build required — see db/engine.py for driver-choice rationale).
    "sqlalchemy==2.0.49",
    "pymysql==1.1.3",
    # ADR-014: Skyfield for almanac ephemeris computation (pre-approved 2026-05-06).
    "skyfield>=1.48",
    # ADR-038 / 3b-1: httpx for provider HTTP (sync mode; respx is its mock lib).
    # Pre-approved 2026-05-07 per task brief §confirmed-call #1.
    "httpx>=0.28.1",
    # ADR-017 / 3b-1: redis-py for the Redis cache backend.
    # Always installed so operators who set CLEARSKIES_CACHE_URL get a working
    # backend without a separate install step (ADR-017 §Decision).
    # Pre-approved 2026-05-07 per task brief §confirmed-call #4.
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.11.9",
    "mypy==1.15.0",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    # Integration tests: pytest-timeout guards against DB fixture hangs
    "pytest-timeout==2.3.1",
    # 3b round 1: respx mocks outbound httpx calls (no live network in CI per ADR-038).
    # fakeredis provides an in-process Redis fake for RedisCache unit tests (ADR-017).
    # httpx is a runtime dep (>=0.28.1); respx needs it pinned exactly for compat.
    "httpx==0.28.1",
    "respx==0.22.0",
    "fakeredis==2.26.2",
]

[project.scripts]
weewx-clearskies-api = "weewx_clearskies_api.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["weewx_clearskies_api"]

# ---------------------------------------------------------------------------
# ruff — linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Rule sets per task brief: E, F, W, I, B, S (security), N (naming), UP, SIM
select = ["E", "F", "W", "I", "B", "S", "N", "UP", "SIM"]
ignore = [
    # S101: assert used — allowed in tests; we'll per-file ignore in test files
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.ruff.lint.extend-per-file-ignores]
# Enforce no f-string SQL — regex pattern ban on f-strings inside db/ module.
# Real enforcement is via S608 (SQL injection) + the grep gate in CI.
# The ruff S608 rule fires on string-formatted SQL; flagging it here
# ensures the CI ruff pass catches it before it reaches review.
"weewx_clearskies_api/db/**/*.py" = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy — strict mode per coding.md §2
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["configobj.*", "cachetools.*"]
ignore_missing_stubs = true

[[tool.mypy.overrides]]
# SQLAlchemy ships its own type stubs (sqlalchemy-stubs is bundled since 2.x).
# pymysql does not ship stubs — ignore missing stubs for it only.
module = ["pymysql.*"]
ignore_missing_stubs = true

[[tool.mypy.overrides]]
# skyfield does not ship type stubs.
module = ["skyfield.*"]
ignore_missing_stubs = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = false
markers = [
    "integration: marks integration tests that require the dev/test stack (MariaDB or seeded SQLite)",
    "redis: marks integration tests that require the redis compose profile (use with -m 'integration and redis')",
]
